# saude-mental-indicadores

./: .cruft.json  .dbt_coves.yml  .dockerignore  .env.exemplo  .gitignore  .pre-commit-config.yaml  .sqlfluff  .sqlfluffignore  Dockerfile  README.md  dbt_project.yml  docs-gen.sh  index.html  packages.yml  profiles.yml  pyproject.toml  requirements.txt
.config/: profiles.yml
.github/workflows/: main.yml  publicar.yml  rodar.yml  test.yml  testar.yml
.reuse/: dep5
analyses/: _caps_usuarios_ativos_perfil_cidcompleto_barbalha.sql  _caps_usuarios_ativos_perfil_cidcompleto_barbalha.yml  _ceps_por_bairro.sql  _ceps_por_bairro.yml  caps_usuarios_ativos_perfil_cidcompleto_barbalha.sql  caps_usuarios_ativos_perfil_cidcompleto_barbalha.yml  internacoes_adg_por_estabelecimento.sql  internacoes_geolocalizadas.sql
docs/: index.html
macros/: classificar_faixa_etaria.sql  generate_schema_name.sql  generate_schema_name.yml  juntar_periodos_consecutivos.sql  limpar_datas_atualizacao.sql
macros/agregar_valores/: calcular_subtotais.sql  calcular_subtotais.yml  remover_subtotais.sql  remover_subtotais.yml  (+4 more)
models/: _ceps_por_bairro.yml  _raps_usuarios_atendidos.sql  _raps_usuarios_atendidos.yml  sources.yml
seeds/: cids.csv  condicoes_saude_mental.csv  estabelecimentos_referencia_ambulatorial.csv  internacoes_desfechos_grupos.csv  internacoes_duracoes.csv  intervalos_tempo_servico.csv  procedimentos_individuais.csv  procedimentos_urgencia.csv  properties.yml
sources/: codigos.yml  scnes.yml  sihsus.yml  sisab.yml
tasks/: docs-consolidate.py
tests/: .gitkeep
(+364 files in other folders)
