# SPDX-FileCopyrightText: 2022 Impulso Gov <contato@impulsogov.org>
#
# SPDX-License-Identifier: MIT


[tool.poetry]
name = "impulsosm_indicadores"
version = "0.1.0"
description = "Transformações de dados para a criação de indicadores da plataforma Impulso Saúde Mental."
authors = ["Impulso Gov <contato@impulsogov.org>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8, <3.10"
dbt-postgres = "^1.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
